# yatm

./: .gitignore  CMakeLists.txt  Generate_Makefile.sh  Generate_VS2019.bat  Generate_VS2022.bat  LICENSE  README.md  yatm.sln  yatm.vcxproj  yatm.vcxproj.filters
include/: yatm.hpp
samples/: CMakeLists.txt  yatm_sample.cpp
samples/common/: sample.hpp  scoped_profiler.hpp
samples/job_dependencies/: CMakeLists.txt  yatm_job_dependencies.cpp
samples/parallel_for/: CMakeLists.txt  yatm_parallel_for.cpp
